cabal-version:      2.4
name:               MissingH
version:            1.4.4.0
build-type:         Simple
license:            BSD-3-Clause
author:             John Goerzen
copyright:          Copyright (c) 2004-2018 John Goerzen
maintainer:         Herbert Valerio Riedel <hvr@gnu.org>
license-file:       LICENSE
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.5 || ==9.0.1
synopsis:           Large utility library
description:
  @MissingH@ is a library of all sorts of utility functions for Haskell
  programmers.  It is written in pure Haskell and thus should be
  extremely portable and easy to use.

category:           Unclassified
bug-reports:        https://github.com/hvr/missingh/issues
extra-source-files:
  3rd-party-licenses/BSD
  3rd-party-licenses/LGPL-2.1
  CHANGES.md
  examples/simplegrep.hs
  examples/test2.hs
  examples/test3.hs
  LICENSE
  test/gzfiles/empty.gz
  test/gzfiles/t1.gz
  test/gzfiles/t1bad.gz
  test/gzfiles/t2.gz
  test/gzfiles/zeros.gz
  test/mime.types.test

flag network--GE-3_0_0
  description:
    [network](http://hackage.haskell.org/package/network) ≥ 3.0.0

  default:     True
  manual:      False

source-repository head
  type:     git
  location: https://github.com/hvr/missingh.git

common common
  build-depends:
    , base          >=4.12 && <4.16
    , containers    ^>=0.6
    , directory     ^>=1.3
    , filepath      ^>=1.4
    , old-time      ^>=1.1
    , parsec        ^>=3.1
    , regex-compat  ^>=0.95
    , time          >=1.8  && <1.13

  if !os(windows)
    build-depends: unix ^>=2.7

  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , array         ^>=0.5
    , hslogger      ^>=1.3
    , mtl           ^>=2.2
    , old-locale    ^>=1.0
    , process       ^>=1.6
    , transformers  ^>=0.5

  if flag(network--ge-3_0_0)
    build-depends:
      , network      ^>=3.1
      , network-bsd  ^>=2.8

  else
    build-depends: network ^>=2.8

  -- cabal-fmt: expand src
  exposed-modules:
    Control.Concurrent.Thread.Utils
    Data.BinPacking
    Data.Bits.Utils
    Data.Compression.Inflate
    Data.CSV
    Data.Either.Utils
    Data.Hash.CRC32.GZip
    Data.Hash.MD5
    Data.Hash.MD5.Zord64_HARD
    Data.List.Utils
    Data.Map.Utils
    Data.Maybe.Utils
    Data.MIME.Types
    Data.Progress.Meter
    Data.Progress.Tracker
    Data.Quantity
    Data.String.Utils
    Data.Tuple.Utils
    Network.Email.Mailbox
    Network.Email.Sendmail
    Network.SocketServer
    Network.Utils
    System.Cmd.Utils
    System.Console.GetOpt.Utils
    System.Daemon
    System.Debian
    System.Debian.ControlParser
    System.FileArchive.GZip
    System.IO.Binary
    System.IO.HVFS
    System.IO.HVFS.Combinators
    System.IO.HVFS.InstanceHelpers
    System.IO.HVFS.Utils
    System.IO.HVIO
    System.IO.PlafCompat
    System.IO.StatCompat
    System.IO.Utils
    System.IO.WindowsCompat
    System.Path
    System.Path.Glob
    System.Path.NameManip
    System.Path.WildMatch
    System.Posix.Consts
    System.Time.Utils
    Text.ParserCombinators.Parsec.Utils

test-suite runtests
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        runtests.hs
  build-depends:
    , errorcall-eq-instance  ^>=0.3
    , HUnit                  ^>=1.6
    , MissingH

  -- cabal-fmt: expand test
  other-modules:
    Bitstest
    CRC32GZIPtest
    Eithertest
    Globtest
    GZiptest
    HVFStest
    HVIOtest
    IOtest
    Listtest
    Maptest
    MIMETypestest
    Pathtest
    ProgressTrackertest
    Str.CSVtest
    Strtest
    Tests
    TestUtils
    Timetest
    WildMatchtest
